--- a/archives.html
+++ b/archives.html
@@ -10,24 +10,24 @@
             <meta name="author" content="GABRIEL WEINDEL" />
 
 
-            <meta name="description" content="    Full archives of Gabriel Weindel&#39;s webage.
+            <meta name="description" content="    Full archives of Gabriel Weindel&#39;s webpage.
 " />
 
                 <meta property="og:type" content="article" />
             <meta name="twitter:card" content="summary"/>
 
     <link rel="canonical" href="/archives">
-    <meta property="og:title" content="Archive | Gabriel Weindel&#39;s webage"/>
-    <meta name="twitter:title" content="Archive | Gabriel Weindel&#39;s webage"/>
+    <meta property="og:title" content="Archive | Gabriel Weindel&#39;s webpage"/>
+    <meta name="twitter:title" content="Archive | Gabriel Weindel&#39;s webpage"/>
     <meta property="og:url" content="/archives" />
-    <meta property="og:description" content="" />
-    <meta name="twitter:description" content=""/>
-    <meta property="og:site_name" content="Gabriel Weindel&#39;s webage" />
+    <meta property="og:description" content="Archives of the posts" />
+    <meta name="twitter:description" content="Archives of the posts"/>
+    <meta property="og:site_name" content="Gabriel Weindel&#39;s webpage" />
     <meta property="og:article:author" content="GABRIEL WEINDEL" />
         <meta property="og:image" content="/img/stone.png" />
         <meta name="twitter:image" content="/img/stone.png"/>
 
-        <title>    All Posts | Gabriel Weindel&#39;s webage
+        <title>    All Posts | Gabriel Weindel&#39;s webpage
 </title>
 
                 <link rel="stylesheet" type="text/css" href="/theme/libs/bootstrap-4.2.1/dist/css/bootstrap.min.css">
@@ -55,7 +55,7 @@
         <link rel="apple-touch-icon" sizes="120x120" href="/theme/img/apple-touch-icon-120x120.png" type="image/png" />
         <link rel="apple-touch-icon" sizes="144x144" href="/theme/img/apple-touch-icon-144x144.png" type="image/png" />
         <link rel="apple-touch-icon" sizes="152x152" href="/theme/img/apple-touch-icon-152x152.png" type="image/png" />
-        <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Gabriel Weindel&#39;s webage - Full Atom Feed" />
+        <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Gabriel Weindel&#39;s webpage - Full Atom Feed" />
     </head>
     <body>
 <progress id="progressBar" max="19827" class="flat">
@@ -73,11 +73,19 @@
                     </div>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                     <ul class="navbar-nav">
-                        <li class="nav-item active">
-                            <a class="nav-link rem_08" href="/about.html">About</a>
+                    
+                        <li id="last-item" class="nav-item">
+                            <a class="nav-link rem_08" href="">Posts</a>
                         </li>
+                        <!--<li class="nav-item active">
+                            <a class="nav-link rem_08" href="/resources.html">Resources</a>
+                        </li>
+                        -->
                         <li id="last-item" class="nav-item">
                             <a class="nav-link rem_08" href="/archives.html">Archive</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link rem_08" href="/about.html">About</a>
                         </li>
                      </ul>
                     <form id="search-form" class="form-inline my-2 my-lg-0 justify-content-center" action="/search.html">
@@ -96,22 +104,22 @@
         <div class="h2 mt-3 title text-center mb-5">Archive</div>
         <hr>
         <div class="meta" style="margin-bottom: 30px; margin-top: 30px;">
+                <a href="/tag/lecture.html" class="tag">lecture (1)</a>
+                <a href="/tag/resources.html" class="tag">resources (2)</a>
                 <a href="/tag/phd.html" class="tag">PhD (1)</a>
-                <a href="/tag/resources.html" class="tag">resources (1)</a>
-                <a href="/tag/construction.html" class="tag">construction (1)</a>
         </div>
         <ul class="double-list">
                 <h2 class="mt-3 mb-3">posts</h2>
                     <li>
-                        <a href='/phd'>
-                            <h2>PhD</h2>
-                            <span>28.04.2020</span>
+                        <a href='/lecture-on-linear-mixed-models'>
+                            <h2>Lecture on Linear Mixed Models</h2>
+                            <span>03.05.2020</span>
                         </a>
                     </li>
                     <li>
-                        <a href='/construction-notice'>
-                            <h2>Construction notice</h2>
-                            <span>11.04.2020</span>
+                        <a href='/phd'>
+                            <h2>PhD</h2>
+                            <span>28.04.2020</span>
                         </a>
                     </li>
         <hr class="mt-4">
@@ -126,7 +134,7 @@
          <div class="col">
             <h5 class="headin5_amrc col_white_amrc pt2"></h5>
             <!--headin5_amrc-->
-            <p class="mb10"><img id="profile_img" align="left" src="/theme/img/profile.png"></p>
+            <p class="mb10"><img id="profile_img" align="left" src="/theme/img/profile.png">My name is Gabriel Weindel and I am a cognitive scientist currently working at Aix Marseille Université in the Laboratoire de Psychologie Cognitive and Laboratoire de Neurosciences Cognitives. As a researcher my interest goes to the test and application of mathematical cognitive models to the general population or to populations with cognitive deficits. See the About page for my resume.</p>
             <p><i class="fa fa-envelope mr-2"></i>firstname.lastname[at]gmail.com</p>
          </div>
       </div>
@@ -138,7 +146,7 @@
          <li><a href="archives.html">ARCHIVE</a></li>
       </ul>
       <!--foote_bottom_ul_amrc ends here-->
-      <p class="text-center">Website powered by Pelican, theme created by Eric Kim (https://aegis4048.github.io/) @2018</p>
+      <p class="text-center">Website powered by the Pelican python package and github pages. \ Theme forked from "aegis" created by Eric Kim (https://aegis4048.github.io/) @2018</p>
       <div class="container">
           <div class="row justify-content-center">
               <div class="row" align="center">
