--- a/archives.html
+++ b/archives.html
@@ -104,12 +104,19 @@
         <div class="h2 mt-3 title text-center mb-5">Archive</div>
         <hr>
         <div class="meta" style="margin-bottom: 30px; margin-top: 30px;">
+                <a href="/tag/resources.html" class="tag">resources (3)</a>
+                <a href="/tag/tutorial.html" class="tag">tutorial (1)</a>
                 <a href="/tag/lecture.html" class="tag">lecture (1)</a>
-                <a href="/tag/resources.html" class="tag">resources (2)</a>
                 <a href="/tag/phd.html" class="tag">PhD (1)</a>
         </div>
         <ul class="double-list">
                 <h2 class="mt-3 mb-3">posts</h2>
+                    <li>
+                        <a href='/rundmc-in-a-jupyter-notebook'>
+                            <h2>RunDMC in a jupyter notebook</h2>
+                            <span>18.10.2021</span>
+                        </a>
+                    </li>
                     <li>
                         <a href='/lecture-on-linear-mixed-models'>
                             <h2>Lecture on Linear Mixed Models</h2>
