--- a/phd.html
+++ b/phd.html
@@ -164,6 +164,7 @@
     <h2>Related Posts</h2>
 <ul class="related-posts-list">
 <li><a href="/lecture-on-linear-mixed-models" title="Lecture on Linear Mixed Models">Lecture on Linear Mixed Models</a></li>
+<li><a href="/rundmc-in-a-jupyter-notebook" title="RunDMC in a jupyter notebook">RunDMC in a jupyter notebook</a></li>
 </ul>
 </section>
     </article>
